k8s/app-manifest/j26-signupinfo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: j26-signupinfo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: j26-signupinfo
  template:
    metadata:
      labels:
        app: j26-signupinfo
    spec:
      containers:
        - name: j26-signupinfo-app
          image: ghcr.io/scouterna/j26-signupinfo:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
            - name: persist
              mountPath: /app/persist
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: j26-signupinfo-kv-csi
        - name: persist
          hostPath:
            path: /var/j26/signupinfo-persist
            type: DirectoryOrCreate
