k8s/app-manifest/j26-signupinfo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: j26-signupinfo
  labels:
    app: j26-signupinfo
spec:
  selector:
    app: j26-signupinfo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
